versioned_docs/version-3.3/api-libf3d/classf3d_1_1ratio__t.md
# Class f3d::ratio_t

![][C++]
![][public]

**Definition**: `types.h` (line 60)



Describe a ratio.

## Members

* [operator double](classf3d_1_1ratio__t.md#classf3d_1_1ratio__t_1ad3cabd2f8bd0ef87119cdc46fc635dec)
* [ratio\_t](classf3d_1_1ratio__t.md#classf3d_1_1ratio__t_1a02a8a65c4b269d42dbdc136d96744b31)
* [ratio\_t](classf3d_1_1ratio__t.md#classf3d_1_1ratio__t_1a4f363d564b0a7b77e9abbfec2349ec04)
* [Value](classf3d_1_1ratio__t.md#classf3d_1_1ratio__t_1a57569a1ebdba597ad042e0a7b6273a29)

## Private attributes

### Variable Value {/* #classf3d_1_1ratio__t_1a57569a1ebdba597ad042e0a7b6273a29 */}

![][private]

**Definition**: `types.h` (line 74)


```cpp
double f3d::ratio_t::Value = 0
```








**Type**: double



## Public functions

### Function ratio\_t {/* #classf3d_1_1ratio__t_1a02a8a65c4b269d42dbdc136d96744b31 */}

![][public]


```cpp
f3d::ratio_t::ratio_t()=default
```








**Return type**: 



### Function ratio\_t {/* #classf3d_1_1ratio__t_1a4f363d564b0a7b77e9abbfec2349ec04 */}

![][public]


```cpp
f3d::ratio_t::ratio_t(double val)
```








**Parameters**:

* double **val**

**Return type**: 



### Function operator double {/* #classf3d_1_1ratio__t_1ad3cabd2f8bd0ef87119cdc46fc635dec */}

![][public]
![][const]


```cpp
f3d::ratio_t::operator double() const
```








**Return type**: 





[public]: https://img.shields.io/badge/-public-brightgreen (public)
[C++]: https://img.shields.io/badge/language-C%2B%2B-blue (C++)
[const]: https://img.shields.io/badge/-const-lightblue (const)
[protected]: https://img.shields.io/badge/-protected-yellow (protected)
[static]: https://img.shields.io/badge/-static-lightgrey (static)
[private]: https://img.shields.io/badge/-private-red (private)